# SanicWebhook

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 2025_06_16_2330-6659ba53efe7_create_tables_users.py  2025_06_17_1644-c160a21a0522_create_table_users.py  2025_06_17_1708-b5735f0ae44c_create_tables_scores_payments.py  2025_06_17_1717-e30334a72fe0_add_users_in_data_base.py  2025_06_19_1657-9ed69b57a47c_add_account_id_in_table_payments.py  2025_06_20_1229-83b47dc5bf7f_create_table_users.py  2025_06_20_1233-6f183404c79a_add_users_and_scopes.py
src/: __init__.py  main.py
src/core/: config.py  database.py  depends.py  exceptions.py
src/payments/: crud.py  models.py  schemas.py  views.py
src/users/: crud.py  models.py  schemas.py  views.py
src/utils/: create_account_number.py  jwt_utils.py  processing.py
tests/: .env  conftest.py  test_user.py
